log
Wed 27 Mar 2024 03:02:39 AM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
abebc8c
Wed 27 Mar 2024 03:05:09 AM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|5
total_score: 15/70
6cba688
Wed 27 Mar 2024 03:10:44 AM UTC: 
 list.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
78f32bf
Wed 27 Mar 2024 03:12:39 AM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
885d965
Wed 27 Mar 2024 03:15:12 AM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:72:62: error: ‘prev’ undeclared (first use in this function)
   72 |   if (list == NULL || list->current == NULL || list->current-prev == NULL)
      |                                                              ^~~~
list.c:72:62: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c94ab6b
